# tiktok-trends

./: .env.example  .gitignore  README.md  pyproject.toml  server.js
config/: brands.txt  investable_map.csv  keyword_groups.json  keywords.txt  reddit_subreddits.txt  rss_feeds.txt
dashboard/: index.html
docs/: architecture.md  cron.md  key_excerpts.md  schema.md  transcript.txt  transcript_segments.json
scripts/: cleanup_example_rows.py  run_once.sh  start_dashboard_node.sh  tiktok_login.py
src/moondev_clawdbot/: alerts.py  cli.py  config.py  enrich.py  export.py  investable.py  keywords.py  llm_enrich.py  models.py  pipeline.py  score.py  storage.py  vision_enrich.py
src/moondev_clawdbot/sources/: base.py  hn.py  reddit.py  registry.py  rss.py  tiktok_mock.py  tiktok_playwright_stub.py  x_mock.py  x_playwright_stub.py
src/moondev_clawdbot/ui/: app.py  dashboard.py
